--- a/website/src/app.css
+++ b/website/src/app.css
@@ -9,24 +9,44 @@ body {
     max-inline-size: 900px;
     margin-inline:auto;
 
+
 }
 
 .mainNavigation{
+    margin-block-start:0px;
+    padding:0px;
     display:flex;
-    border:3px red dotted;
     justify-content:space-between;
+
 }
 
 .mainNavigation ul {
     display:flex;
-    gap:20px;
+    gap:5px;
     list-style:none;
     margin:0;
-    padding:0;
+    padding-block:0.2rem;
+    padding-inline-end:0.1rem;
 }
 
-.mainNavigation ul li {
+.mainNavigation li {
+    margin-block:0.3rem;
+}
 
+
+.mainNavigation a {
+    color:black;
+    font-weight:bold;
+    text-decoration:none;
+    color:#ffffff;
+    background-color: #ffffff;
+    color:rgb(43, 76, 142);
+    padding:3px;
+}
+
+.main-navigation a:hover,
+.main-navigation a:focus-visible{
+    color:green;
 }
 
 .subTopic{
@@ -38,36 +58,33 @@ body {
     color:rgb(43, 76, 142);
 }
 
-.multi-column-layout {
-    gap:5px;
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    color:green;
-    
-}
 
 .landerPage {
     background-image: url('../images/forest_backgroundImage.jpg');
     padding:10rem;
-    border:rgb(0, 0, 0) 3px solid;
     background-repeat:no-repeat;
     background-position:center;
     background-size:cover;
     color:#ffffff;
     margin-bottom:30px
     
-    
-   
 }
+
+.landerPageHeading{
+    text-align: left;
+    border:3px solid red;
+}
+
 .first-site-text {
     padding-inline:0px;
     max-inline-size: 1000px;
     font-size:30px;
 }
+
 .highlighted-1{
     color:rgb(138, 219, 138);
-    
 }
+
 .highlighted-2 {
     color:rgb(116, 169, 225);
 }
@@ -83,6 +100,14 @@ body {
 
 }
 
+.multi-column-layout {
+    gap:5px;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    color:black;
+    
+}
+
 .whatWeDo{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 
@@ -90,8 +115,8 @@ body {
 
 .currentProjects{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-
 }
+
 .two-column-text-section 
 {
     padding-block:1rem;
@@ -112,10 +137,6 @@ body {
     border:3px #df9a72 solid;
   }
 
-.card.click
-{
-
-}
   
 /* Add some padding inside the card container */
 .container {
