--- a/website/src/app.css
+++ b/website/src/app.css
@@ -15,46 +15,42 @@ body {
 header{
     display:flex;
     justify-content: space-between;
-    border:3px solid green;
 }
 
 .mainNavigation ul {
-    border:solid red 3px;
     display:flex;
-    gap:5px;
+    gap:10px;
     list-style:none;
     margin:0;
-    padding-block:0.2rem;
-    padding-inline-end:0.1rem;
+    padding-block-start:1.5rem;
+    padding-inline-end:1rem;
 }
+
+
 #lmgLogo{
-    border:solid blue 3px;
-    max-widht:30px;
-    max-height:30px;
+    display:flex;
+    max-width:7rem;
+    max-height:7rem;
 }
-
-.mainNavigation li {
-    margin-block:0.3rem;
-}
-
 
 .mainNavigation a {
-    color:black;
+    text-decoration: none;
+    color:rgba(0,122,185,255);
     font-weight:bold;
-    text-decoration:none;
-    color:#ffffff;
-    background-color: #ffffff;
-    color:rgb(43, 76, 142);
     padding:3px;
+    border-radius:1px;
 }
 
-.main-navigation a:hover,
-.main-navigation a:focus-visible{
-    color:green;
-}
+
+
 
 .subTopic{
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        border: solid 3px rgba(0,122,185,255);
+        border-radius:5px;
+        margin-block-end:0.3rem;
+        padding-inline:1rem;
+
 }
 
 .h2Topics{
@@ -72,11 +68,16 @@ header{
     color:#ffffff;
     margin-bottom:30px
     
+    
 }
 
 .landerPageHeading{
-    text-align: left;
-    border:3px solid red;
+
+    background-color: rgba(255,255,255,1);
+    color:rgba(0,122,185,255);
+    text-align: center;
+    border:3px solid #ffffff;
+    border-radius:5px;
 }
 
 .first-site-text {
@@ -153,4 +154,14 @@ border-radius: 5px 5px 0 0;
 
 .aboutUs{
     
+}
+
+footer{
+    
+    border: solid 3px rgba(0,122,185,255);
+
+}
+
+footer ul {
+    text-align: left;
 }
