--- a/website/src/app.css
+++ b/website/src/app.css
@@ -55,7 +55,7 @@ header{
 }
 
 .h2Topics{
-    @media(width < 600px){
+    @media(width < 1500px){
         font-size:3rem;
     }
     padding-block-start:1rem;
@@ -78,6 +78,11 @@ header{
 }
 
 .landerPageHeading{
+    @media(width < 600px){
+        font-size:3rem;
+        max-width:900px;
+    }
+
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 
     background-color: rgba(255,255,255,1);
