--- a/website/src/app.css
+++ b/website/src/app.css
@@ -26,7 +26,7 @@ header{
     padding-inline-start:3px;
     padding-inline-end:1rem;
     font-size:2rem;
-    margin-block-start:3rem;
+    margin-block-start:3.6rem;
 }
 }
 
@@ -79,7 +79,7 @@ header{
 
 .h2Topics{
     padding-block-start:1rem;
-    color:rgb(43, 76, 142);
+    color:rgba(0,122,185,255);
     padding-block-start:1rem;
     padding-block-end:0.7rem;
     margin-block:0rem;
@@ -140,14 +140,39 @@ header{
     display:inline-block;
 
 }
+.subTopicText{
+    @media only screen and (width > 500px){
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    margin-block-end:1rem;
+    padding:0px;
+}
+}
+
+#wetterstationen_mit_gehauese{
+    @media only screen and (width > 500px){
+    max-width:400px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    margin-block-end:1rem;
+    margin-inline-end:0px;
+}
+}
 
 .multi-column-layout {
-    gap:5px;
+    gap:20px;
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
     color:black;
     
 }
+
+.twoColumnLayout{
+    gap:20px;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    color:black;
+}
+
+
 
 .two-column-text-section 
 {
@@ -156,11 +181,21 @@ header{
     background-color: rgb(137, 217, 252);
 }
 .card {
+    border:orange solid 3px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
-    margin-block-end:1rem;
+    border-radius: 0px; /* 5px rounded corners */
+    margin-block-end:1.5rem;
   }
+
+#weatherStationCard{
+    border:solid green 5px;
+    border-radius:0px;
+}
+#windstationCard{
+    border:solid rgb(37, 37, 139) 5px;
+
+}
 
   .cardImage{
         @media only screen and (width > 500px){
