--- a/website/src/home/app.css
+++ b/website/src/home/app.css
@@ -17,10 +17,7 @@ header{
     justify-content: space-between;
 }
 
-.mainNavigation {
-    position:sticky;
-    top:0;
-}
+
 
 .mainNavigation ul {
 
@@ -65,7 +62,7 @@ header{
 }
 
 .subTopic{
-        border: solid 3px rgba(0,122,185,255);
+
         border-radius:5px;
         margin-block-end:0.3rem;
         padding-inline:1rem;
@@ -78,6 +75,13 @@ header{
         font-size:2.5rem;
         margin-block-end:1rem;
 }
+}
+
+.subTopic h2:hover{
+    color:#ffffff;
+    transition:0.2s;
+    background-color:rgba(0,122,185,255);
+
 }
 
 .subTopic p {
@@ -180,8 +184,13 @@ header{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     margin-block-end:1rem;
     margin-inline-end:0px;
+    
 }
 }
+#lmgGebaeudeAussenansicht:hover,#wetterstationen_mit_gehauese:hover{
+        transition:0.5s;
+        transform:scale(1.4);
+    }
 
 #wetterstationen_mit_gehauese{
     @media only screen and (width > 500px){
@@ -235,7 +244,10 @@ header{
 .card:hover {
     transition:0.2s;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    border:3px #df9a72 solid;
+    border:5px #df9a72 solid;
+    transition:0.5s;
+    transform:scale(1.1);
+
   }
 
   
